core/dd/css/dd_list.less
#wrapGeneral {
  border: none;
  width: 100%;
	font-size: initial;
}
#wrapGeneral table {
  width: 100%;

  td {
  	padding: 0;
  }
}
a:link {
  text-decoration: none;
  color: #3C3C3C;
  font-weight: inherit;
}
a:visited {
  text-decoration: none;
  color: #000000;
}
a:hover {
  text-decoration: none;
  color: #FFFFFF;
}
a:active {
  text-decoration: none;
  color: #1A262A;
}
img {
  border: none;
  vertical-align: middle;
}
/* FORM ELEMENTS */
input {
  font-size: 11px;
  background-color: #F4F4F4;
  border: 1px solid #CCCCCC;
  border-radius: 3px;
  padding: 2px;
  margin: 2px;
  color: #666666;
}
input[disabled],
input[readonly] {
  background-color: #CCC;
}
input[type="checkbox"] {
  cursor: pointer ;
  margin-bottom: 5px;
}
input[type="button"] {
  color: #F7F7F7;
  height: 21px;
  padding: 3px;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 0px;
  border: none;
  border-radius: 3px;
  background-image: url('../../dd/images/th_ramp2.png');
  background-position: 0 -1px;
  cursor: pointer;
}
input[type="button"]:hover {
  color: #fff;
}
textarea {
  font-size: 11px;
  background-color: #f4f4f4;
  border: 1px solid #CCCCCC;
  padding: 2px;
  color: #999999;
  border-radius: 4px;
}
select {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 11px;
  background-color: #f4f4f4;
  border: 1px solid #CCCCCC;
  padding: 2px;
  color: #333333;
  border-radius: 3px;
}
.SubmitButon {
  cursor: pointer;
  height: 20px;
  background-color: #e57400;
  color: #FFF ;
  border: none;
  border-radius: 3px;
  box-shadow: 1px 2px 2px #888888;
  background-image: url('../../dd/images/ramp_orange.jpg') !important;
  padding-left: 4px;
  padding-right: 4px;
}
#terminoID {
  width: 90px;
  text-align: center;
  transition: all 0.06s ease-in-out;
  }
  #terminoID:focus {
    //width: 80px;
  }
#termino {
  width: 90px;
  text-align: center;
  transition: all 0.08s ease-in-out;
  }
  #termino:focus {
    //width: 100px;
  }
#def {
  width: 70px;
  text-align: center;
  transition: all 0.2s ease-in-out;
  }
  #def:focus {
    //width: 100px;
  }
#tipo {
  width: 40px !important;
  transition: all 0.2s ease-in-out;
}
#tipo:focus {
  width: 80px !important;
}
#SelectLangList {
  width: 40px !important;
  transition: all 0.2s ease-in-out;
}
#SelectLangList:focus {
  width: 80px !important;
}
/********************
* TESAURO JERÁRQUICO
********************/
#tesauro_content {
  font-size: 11px;
  color: #3C3C3C;
  padding-top: 1em;
}
.marginTopNoHead {
  margin-top: 8px;
  clear: both;
}
.divCont {
  margin: 0px;
  margin-left: 3px;
  padding: 0px;
  text-align: left;
  clear: both;
}
.divTS {
  margin: 0px;
  padding: 0px;
  padding-top: 4px;
}
.divTS img {
  margin: 0px;
  padding: 0px !important ;
  cursor: pointer;
}
.btnGo1 {
  cursor: pointer;
}
#divTsIcons {
  margin: 0px;
  margin-left: 5px;
  color: #9F9F9F;
}
#divTsIcons #spanTermino {
  color: #000;
  font-weight: bold;
  border-bottom: 2px solid #e15200;
}
.divTsIconsResalte {
  background-color: #00cc33;
}
#notaND {
  font-weight: 100;
  font-size: 11px;
  margin-right: -3px;
  color: #8e8e8e;
}
.divflechaC {
  margin: 0px;
  padding: 0px;
  width: 15px;
  height: 9px;
  display: inline-block;
  cursor: pointer;
}
.divLineasInfo {
  color: #496473;
  padding-top: 5px;
  padding-right: 2px;
  padding-bottom: 5px;
  padding-left: 50px;
  clear: left;
}
.divLineasInfo pre {
  background-color: #e9dd9f;
  opacity: 0.8;
}
.div_termino {
  display: none;
  background-color: #FF3;
}
.divCintas {
  display: none;
  color: #496473;
  padding-top: 5px;
  padding-right: 2px;
  padding-bottom: 5px;
  padding-left: 50px;
  clear: left;
}
/*-- LIST HEADER --*/
#tsTreeLOAD {
  width: 96%;
}
#tsTreeLOAD .tsHeader {
  display: block;
  color: #303030;
  background-position: -1px;
  height: 19px;
  margin-top: 12px;
  margin-bottom: 2px;
  text-align: left;
  background-color: #afafaf;
  //background-image: url('../../dd/images/th_ramp.png');
  border: 0px;
  border-style: inset;
  border-color: #DBDBDB;
  border-radius: 3px;
  text-shadow: 0 0 0 transparent, 0 1px 0 #cdcdcd;
  //box-shadow: 0 1px 2px #aeaeae;
}
#tsTreeLOAD .tsHeader .tsHeaderLeft {
  float: left;
  margin-left: 10px;
  font-weight: bold;
  line-height: 1.98em;
}
#tsTreeLOAD .tsHeader .tsHeaderLeft IMG {
  margin-left: 2px;
  margin-top: -2px;
  cursor: pointer;
}
#tsTreeLOAD .tsHeader .tsHeaderRight {
  float: right;
  margin-right: 10px;
  margin-top: 3px;
  font-weight: bold;
}
#tesauroDivLine {
  width: 100%;
  height: 1px;
  margin: 0px;
  background-color: #b9b9b9;
}
#tsTreeLOAD .tsHeader .linkTojerBar {
  float: right !important;
  margin-right: 10px;
  margin-top: 1px;
  right: 0px;
  cursor: pointer;
}
#tsTreeLOAD .tsHeader_modelo {
  background-color: #EC934B;
  //background-image: url('../../dd/images/th_ramp3.png');
}
/* FIN TESAURO JERÁRQUICO */
.nOrden {
  font-size: 9px;
  text-align: right;
  display: inline-block;
  min-width: 31px;
  margin-right: 2px;
}
.nOrden a {
  color: #999999;
}
.textoTermino {
  display: inline-block;
  min-height: 15px;
  position: relative;
  top: 0px;
  line-height: 1.2em;
  font-family: "Menlo", monospace;
}
.resalte {
  display: inline-block;
  color: #000;
  font-weight: bold;
  background-color: #FF0;
  padding-left: 3px;
  padding-right: 3px;
  padding-bottom: 1px;
}
.btnModelo {
  display: inline;
  padding: 0px;
  margin-left: 4px;
  color: #F60;
  display: none;
}
div.inline {
  display: inline;
}
div.none {
  display: none;
}
.input_field_inline {
  width: 300px;
  margin: 0px;
  background-color: #e57400;
  color: #FFFFFF;
  border: none;
}
.close_img_inline {
  vertical-align: middle;
  position: relative;
  left: 2px;
  top: -1px;
  display: none;
}
.listado_tr_modelo_text {
  color: #F63;
  opacity: 0.8;
}
/*-- SORTABLE TR --*/
ul.tesauro_tr_sortable {
  list-style-type: none;
  margin: 1px;
  margin-left: 28px;
  padding: 0px;
}
ul.tesauro_tr_sortable li {
  margin: 1px;
  padding: 3px;
  padding-bottom: 0px;
  width: 60%;
  border-radius: 3px;
  line-height: 1em;
}
ul.tesauro_tr_sortable li:hover {
  cursor: move;
  background-color: #fdc06a;
}
/*-- TABLE_LIST_TS_USED : TABLA DE INDEXACIONES "U" . Son los fragmentos indexados con el término actual --*/
table.table_list_ts_used {
  background-color: #e6e6e6;
}
table.table_list_ts_used td {
  padding: 3px;
}
.cuadroU {
  display: inline-block;
  height: 14px;
  width: auto;
  margin: 0px;
  padding: 0px;
  padding-left: 4px;
  padding-right: 4px;
  overflow: hidden;
  background-color: #e9dd9f;
  border: solid 1px #919191;
  color: #333333;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 8px !important;
  vertical-align: middle;
  cursor: pointer;
  line-height: 14px;
  position: relative;
  top: 0px;
}
.cuadroU:active {
  background-color: #999999;
  color: #ffffff;
}
.icon-help {
  background-image: url('../../dd/images/icon-help.gif');
  width: 12px;
  height: 12px;
  margin: 0;
  display: inline-block;
  vertical-align: middle;
  cursor: pointer;
}
.bullet_mas {
  background-image: url('../../dd/images/bullet_mas.png');
  width: 18px;
  height: 18px;
  display: inline-block;
  position: relative;
  vertical-align: top;
  cursor: pointer;
}
.icon_delete {
  background-image: url('../../dd/images/delete.png');
  width: 12px;
  height: 13px;
  display: inline-block;
  vertical-align: text-top;
  cursor: pointer;
}
.icon_edit {
  background-image: url('../../dd/images/edit_grey.png');
  width: 15px;
  height: 15px;
  display: inline-block;
  margin: 0px;
  margin-top: -1px;
  cursor: pointer;
  vertical-align: text-top;
}
.tesauro_button_show_tr {
  background-image: url('../../dd/images/tr-icon.gif');
  width: 15px;
  height: 14px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  margin: 0px;
  position: relative;
}
.icon-mostrar-def {
  background-image: url('../../dd/images/q.gif');
  width: 15px;
  height: 14px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  position: relative;
}
.mostrar-modelo {
  background-image: url('../../dd/images/m-icon.gif');
  width: 15px;
  height: 14px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  margin: 0px;
  position: relative;
}
.mostrar-obs {
  background-image: url('../../dd/images/o-icon.gif');
  width: 15px;
  height: 14px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  margin: 0px;
  position: relative;
}
.mostrar-nd {
  background-image: url('../../dd/images/nd.gif');
  width: 15px;
  height: 14px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  margin: 0px;
  position: relative;
}
.add_index_btn {
  background-image: url('../../dd/images/icon_go1.png');
  width: 16px;
  height: 16px;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;
  margin: 0px;
  position: relative;
}
/* se usa en el id del tesauro tipo [756] */
.terminoIDinList {
  font-size: 9px !important;
  color: #666666 !important;
  margin-left: 3px;
}
.terminoIDinList .add_index_btn {
  vertical-align: middle;
  top: 0px;
}
.json_bad_alert,
.json_bad_alert pre {
  background-color: #d52715;
  color: #ffffff;
  opacity: 1;
}
.bottom_separator {
  display: block;
  height: 200px;
}
.dd_info_bottom {
  margin-left: 40px;
  padding: 10px;
  background-color: rgba(211, 211, 211, 0.43);
  display: inline-block;
  border-radius: 4px;
  color: #565656;
}
.dd_info_bottom label {
  display: inline-block;
  width: 74px;
}

.activa {
  display: block;
}
.activa>* {
  display: block !important;
}
/*
img.dropIcon { margin:0px; margin-top:-4px; cursor:pointer }
img.btnEdit { width:15px; height:15px;  margin:0px; margin-top:-1px; cursor:pointer}
*/
/* only for safari */
/*# sourceMappingURL=dd_list.css.map */



// header
	.header {
		width: 100%;
		height: 3em;
		margin: 0;
		padding: 0;
		background-color: #f48c1c;
		color: white;
		display: flex;
		align-items: baseline;

		>h2 {
			padding: .25em;
			padding-left: 1em;
			padding-right: 1em;
		}
	}

